# code-fastapi-be-ai

./: Dockerfile  Dockerfile.dev  README.md  docker-compose.base.yml  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
.github/workflows/: cicd.yml
src/: database.py  index_router.py  main.py  models.py  settings.py
src/app/auth/: dependencies.py  enums.py  schemas.py  security.py
src/app/common/: supabase_client.py  vnpay_core.py
src/app/common/response/: base_response.py
src/app/middlewares/: log_request_and_response_middleware.py
src/app/payment/: router.py  schema.py  service.py
src/app/persona/: router.py  schema.py  service.py
src/app/settings/: router.py  schema.py  service.py
src/app/token_packages/: router.py  schema.py  service.py
src/app/user/: router.py  schema.py
src/migrations/: env.py
src/migrations/versions/: 1e6d0e84918e_add_vnpay_fields_to_transactions.py  395c415d8d07_add_request_logs_table.py  42da33f89c85_delete_user.py  43ce9912659a_.py  5d350fe38c22_.py  855b42fb0a32_create_users.py  8877d818afc4_add_tokens_and_transactions_tables.py  a9ba5b9a3902_.py  ce45424a5768_add_persona_table.py  fe00db8f1513_add_token_packages_table.py
