[project]
name = "code-fastapi-be-ai"
version = "0.1.0"
description = ""
authors = [
    {name = "VuVanNghia",email = "vuvannghia.work@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "environs (>=14.6.0,<15.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "uvicorn (>=0.41.0,<0.42.0)",
    "fastapi (>=0.134.0,<0.135.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
