[project]
name = "code-fastapi-be-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "cryptography>=46.0.5",
    "environs>=14.6.0",
    "fastapi>=0.135.1",
    "loguru>=0.7.3",
    "psycopg2-binary>=2.9.11",
    "pyjwt>=2.11.0",
    "python-multipart>=0.0.22",
    "sqlalchemy>=2.0.48",
    "supabase>=2.28.0",
    "uvicorn>=0.41.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
